--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -8,7 +8,7 @@ $mobileW: 768px;
 $smallMobileW: 480px;
 $bigScreenW: 1600px;
 $leftWidth: 220px;
-
+	
 $gray: #999;
 $lightGray: #eee;
 
@@ -125,7 +125,7 @@ header {
 			right: 40px;
 		}
 		div.highlight {
-			padding: 30px 40px;
+			padding: 30px;
 		}
 	}
 
