--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,22 +3,48 @@ layout: page
 ---
 {%- if site.posts.size > 0 -%}
 <ul class="posts">
-	{%- for post in site.posts -%}
-	<li>
-		{%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-		<div class="post-meta">
-			<a class="post-link" href="{{ post.url | relative_url }}">
-				<h2 class="post-title">{{ post.title | escape }}</h2>
-			</a>
-			<div class="post-date"><i class="icon-calendar"></i>{{ post.date | date: date_format }}</div>
-		</div>
-		<div class="post">
+
+	{%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+
+
+	<!-- <div>
+			<img src="/assets/images/thumbnails/{{ post.title | escape }}.png">
+			<div class="post-meta">
+				<a class="post-link" href="{{ post.url | relative_url }}">
+					<h2 class="post-title">{{ post.title | escape }}</h2>
+				</a>
+				<div class="post-date"><i class="icon-calendar"></i>{{ post.date | date: date_format }}</div>
+			</div>
+			<div class="post">
 			{%- if site.show_excerpts -%}
 			{{ post.excerpt }}
 			{%- endif -%}
-		</div>
-	</li>
-	{%- endfor -%}
-</ul>
-{%- endif -%}
+			</div>
+		</div> -->
 
+
+
+	<section class="cards-wrapper">
+		{%- for post in site.posts -%}
+		<li>
+			
+			<div class="card-grid-space">
+				<a class="card" href="{{ post.url | relative_url }}"
+					style="--bg-img: url('../../assets/images/thumbnails/{{ post.title | escape}}.png')">
+					<div>
+						<h1>{{ post.title | escape}}</h1>
+						<div class="date">{{ post.date | date: date_format }}</div>
+					</div>
+				</a>
+			</div>
+
+		</li>
+		{%- endfor -%}
+
+	</section>
+
+
+
+</ul>
+
+{%- endif -%}
