Changed Header background && navbar buttons

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,47 @@
       {%- include nav.html -%}
     </div>
     {%- include post_header.html -%}  
+
+    <div class="rocket">
+      <i class="external-tank">
+        <i class="rocket-booster"></i>
+      </i>
+      <i class="shuttle">
+        <i class="window"></i>
+      </i>
+      <i class="thrusters"></i>
+      <i class="flames"></i>
+      <i class="flames right"></i>
+      <i class="smoke">
+        <i class="s-1"></i>
+        <i class="s-2"></i>
+        <i class="s-3"></i>
+        <i class="s-4"></i>
+        <i class="s-5"></i>
+        <i class="s-6"></i>
+        <i class="s-7"></i>
+        <i class="s-8"></i>
+        <i class="s-9"></i>
+        <i class="s-10"></i>
+        <i class="s-11"></i>
+        <i class="s-12"></i>
+        <i class="s-13"></i>
+        <i class="s-14"></i>
+        <i class="s-15"></i>
+        <i class="s-16"></i>
+        <i class="s-17"></i>
+        <i class="s-18"></i>
+        <i class="s-19"></i>
+        <i class="s-20"></i>
+        <i class="s-21"></i>
+        <i class="s-22"></i>
+        <i class="s-23"></i>
+        <i class="s-24"></i>
+        <i class="s-25"></i>
+      </i>
+    </div>
+  </header>
+  
   </header>
   <main>
     <div class="container">
