--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -238,6 +238,8 @@ header {
 		list-style-type: none;
 		li {
 			// background-color: #ff9f1c;
+			border-radius: 10px;
+			margin: 3px;
 			border: 1px solid #fff;
 			float: left;
 			// margin: 5px;
